--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright 2020 PaulGriffith
 -->
 <head>
-	<title>An example website</title>
+	<title>A great website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -19,10 +19,11 @@
 		<p>
 			Just some content
 			Some more content
+			Not the content you were expecting
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Axiom 2022</p>
 	</footer>
 </body>
 </html>
