--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!--
 	Copyright 2020 PaulGriffith
+	Adding changes before rebasing conflicts
 -->
 <head>
 	<title>A great website</title>
