--- a/simple.html
+++ b/simple.html
@@ -2,6 +2,7 @@
 <!--
 	Copyright 2020 PaulGriffith
 	Got rid of the earlier message
+	This is fine now.
 -->
 <head>
 	<title>A great website</title>
