Conflicting changes here

--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--
 	Copyright 2020 PaulGriffith
-	Adding changes before rebasing conflicts
+	Got rid of the earlier message
 -->
 <head>
 	<title>A great website</title>
