--- a/simple.html
+++ b/simple.html
@@ -24,7 +24,7 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; AxiomFocus 2020</p>
+		<p>&copy; AxiomFocus 2020-21</p>
 	</footer>
 </body>
 </html>
